--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -30,6 +30,11 @@ li.js_nav-item.nav-item{
   width : 212px;
 }
 
+#contact > .section-seperator > .content-md > .row > .col-sm-3 > .team-label >  .flip-container > .flipper > .front > .swiper-clients-img {
+  height: 246px;
+}
+
+
 a.header.nav-item-hover {
   margin-top: -10px
 }
@@ -184,13 +189,17 @@ input:checked + label {background: #ed5a6a; color: #fff;}
 	}
 
 .flip-container, .front {
-	width: 200px;
-	height: 180px;
+  width: 202px;
+  height: 246px;
+}
+
+.front {
+  z-index: 2;
 }
 
 .back{
-  width: 198px;
-	height: 178px;
+  width: 200px;
+  height: 244px;
 }
 
 .back-title {
@@ -286,6 +295,43 @@ input:checked + label {background: #ed5a6a; color: #fff;}
     text-decoration: none;
     cursor: pointer;
 }
+
+.team-label {
+    width: 202px;
+    background: white;
+    height: 310px;
+    box-shadow: 0px 1px 4px rgba(0,0,0,.31);
+}
+
+.member-info1 {
+  height: 70px;
+  width: 201px;
+  box-shadow: 0px 1px 4px rgba(0,0,0,.31);
+}
+
+.member-info1-flip {
+  height: 72px;
+  width: 201px;
+  box-shadow: 0px 1px 4px rgba(0,0,0,.31);
+  margin-top: 110px;
+}
+
+.title-four {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 1.9;
+  letter-spacing: .6px;
+  text-transform: uppercase;
+}
+.member-role {
+  margin-top: -16px;
+}
+.contact-list {
+  align-items: center;
+  margin-top: 70px;
+}
+
 
 /*.front .name {
 	font-size: 2em;
