--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -1,3 +1,12 @@
+.navbar-fixed-top > .navbar {
+  background: rgba(77,77,77,0.8)
+}
+
+.content-lg {
+  padding-top: 50px; !important;
+  padding-bottom: 100px; !important;
+}
+
 #intaglio-over-years{
   background: url(../img/rev_intag_3.jpg) no-repeat center center;
 }
@@ -446,7 +455,6 @@ a.header.nav-item-hover {
 }
 
 .intag-tabs {
-  display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
@@ -467,6 +475,31 @@ a.header.nav-item-hover {
   cursor : pointer;
   opacity: 0.7;
 }
+
+@media screen and (min-width: 768px) {
+
+  .intag-tabs {
+    display: flex;
+  }
+  .intag-tab-dropdown {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intag-tabs {
+    display: none;
+  }
+  .intag-tab-dropdown {
+    display: block;
+  }
+}
+
+.intag-tab-dropdown > .dropdown > .dropdown-menu {
+  cursor: pointer;
+}
+
+
 
 #content2, #content3, #content4, #content5, #content6, #content7, #content8, #content9,
 #content10, #content11 {
