added more details, responsive carousel

--- a/intaglio-v3/HTML/css/layout.css
+++ b/intaglio-v3/HTML/css/layout.css
@@ -1001,10 +1001,7 @@ fieldset[disabled] .btn-theme {
     [Carousel]
 ------------------------------------------------------------------*/
 .carousel-indicators {
-  left: auto;
-  width: auto;
-  padding-left: 0;
-  margin-left: 0;
+  bottom: 80px
 }
 
 .carousel-centered {
