--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -616,6 +616,12 @@ blockquote > .author-right {
   .intag-event-section .active + div {
     height: 350px;
   }
+  #work {
+        margin-top: -280px;
+  }
+  #events {
+    padding-bottom: 0px;
+  }
 }
 
 @media screen and (max-width:991px) {
@@ -654,4 +660,28 @@ div.event-content {
   height: 129px;
   margin-bottom: 5px;
   margin-right: 7px;
+}
+
+.btn-default.btn-event-large {
+  border: 3px solid black;
+  bottom: 39px;
+  right: 31px;
+}
+.btn-info.btn-event-large {
+  border-radius: 5px;
+  padding: 8px 12px;
+  bottom: 37px;
+  right: 121px;
+}
+.btn-event-large {
+  position: absolute;
+}
+
+.intag-tabs-child-active {
+  border: 1px solid #ccc;
+  color: black;
+  text-decoration: underline;
+  font-weight: 500;
+  padding: 12px;
+  box-shadow: 2px 10px 10px #ccc;
 }
