--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -534,6 +534,11 @@ h4.intag-event-section-h4.active {
   display: none;
 }
 
+#content2-small-screen, #content3-small-screen, #content4-small-screen, #content5-small-screen, #content6-small-screen, #content7-small-screen, #content8-small-screen, #content9-small-screen,
+#content10-small-screen, #content11-small-screen {
+  display: none;
+}
+
 blockquote{
   display:block;
   background: #fff;
