--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -2,10 +2,8 @@
   background: rgba(77,77,77,0.8)
 }
 
-
-.content-lg {
-  padding-top: 50px; !important;
-  padding-bottom: 100px; !important;
+.top-nav-collapse > nav.navbar {
+  background: #A4C2A5 !important
 }
 
 .footer {
@@ -23,7 +21,7 @@
 
 li#home.js_nav-item.nav-item.active {
   background-color: darkgrey;
-  height: 71px;
+  /*height: 71px;*/
 }
 
 li.js_nav-item.nav-item.active {
@@ -649,6 +647,15 @@ blockquote > .author-right {
   .small-screen-height {
     height: 150px;
   }
+  li.js_nav-item.nav-item {
+    height: 42px;
+  }
+  li.js_nav-item.nav-item.active {
+    height: 42px;
+  }
+  a.native-item-child.nav-item-hover {
+    color: white !important
+  }
 }
 
 div.event-content {
@@ -689,4 +696,8 @@ div.event-content {
   font-weight: 500;
   padding: 12px;
   box-shadow: 2px 10px 10px #ccc;
+}
+
+.alternate-color {
+  background: beige
 }
