logo centered. added past highlights

--- a/intaglio-v3/HTML/css/layout.css
+++ b/intaglio-v3/HTML/css/layout.css
@@ -643,6 +643,7 @@ fieldset[disabled] .btn-theme {
   float: left;
   max-height: 95px;
   line-height: 65px;
+  margin-top: -10px;
 }
 
 .header .logo-wrap {
