--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -718,3 +718,87 @@ div.event-content {
   font-size: 20px;
   margin-left: 23px;
 }
+
+.speaker-img {
+  cursor: pointer;
+  display: block;
+  float: left;
+  position: relative;
+  overflow: hidden;
+}
+
+.speaker-img .caption {
+  position: absolute;
+  top: 27px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 26px;
+  text-align: center;
+  box-sizing: border-box;
+}
+/*.speaker-img .caption:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.5);
+  pointer-events: none;
+  content: '';
+  -webkit-transition: -webkit-transform 0.6s;
+  transition: transform 0.6s;
+  -webkit-transform: scale3d(2.2, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, -100%, 0);
+  transform: scale3d(2.2, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, -100%, 0);
+}*/
+.speaker-img .caption span {
+  color: black;
+  font-weight: bold;
+  opacity: 0;
+  margin: 75px 0 15px 0;
+  font-size: 16px;
+}
+.speaker-img .caption a {
+  display: block;
+  margin-top: 20px;
+  color: black;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  opacity: 0;
+}
+.speaker-img .caption hr {
+  width: 0;
+  border-width: 0;
+  border: 1px solid black;
+}
+.speaker-img.visible a,
+.speaker-img.visible span, .speaker-img:hover a,
+.speaker-img:hover span {
+  animation: fadein ease-in 1s;
+  animation-fill-mode: forwards;
+  animation-delay: 0.7s;
+}
+.speaker-img.visible hr, .speaker-img:hover hr {
+  width: 100%;
+  border-width: 1px;
+  transition: border-width,width 0.5s ease-in-out;
+  transition-delay: 0.5s;
+}
+.speaker-img.visible img, .speaker-img:hover img {
+  opacity: 0.1;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+}
+.speaker-img.visible .caption:before, .speaker-img:hover .caption:before {
+  -webkit-transform: scale3d(1.9, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, 100%, 0);
+  transform: scale3d(1.9, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, 100%, 0);
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
