--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -622,7 +622,7 @@ blockquote > .author-right {
   .intag-event-section .active + div {
     height: 350px;
   }
-  #work {
+  #products {
         margin-top: -280px;
   }
   #events {
