--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -767,12 +767,12 @@ div.intag-team-info {
 }
 div.carousel-heading {
   width: 100%;
-  height: 87px;
+  height: 68px;
   background: rgba(255,255,255,0.5);
   margin-left: 50px;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: column;
   margin-top: 45px;
 }
@@ -782,15 +782,16 @@ div.carousel-heading-title {
   font-weight: bold;
   /* padding: 15px; */
   /* margin: 17px; */
-  margin-top: 27px;
+  margin-top: 18px;
   margin-left: 10px;
 }
 div.carousel-heading-points {
-  font-size: 21px;
+  font-size: 27px;
   color: black;
   font-weight: bold;
   padding: 16px;
-  margin-top: -20px;
+  margin-top: -31px;
+  margin-left: 18px;
 }
 div.main-text
 {
