--- a/intaglio-v3/HTML/events/event.css
+++ b/intaglio-v3/HTML/events/event.css
@@ -77,6 +77,10 @@ div#regBtn {
 .split {
   margin-top: 30px;
 }
+
+h4 {
+  font-weight: bold;
+}
 a{
   color: black;
 }
@@ -89,7 +93,7 @@ a{
 .split .elements li article .icon i{display:block; position:relative; width:60px; height:60px; line-height:58px; border:1px solid; border-radius:50%; font-size:22px; text-align:center;}
 .split .elements li article .icon i::before{}
 .split .elements li article .icon i::after{display:block; position:absolute; top:3px; left:3px; width:52px; height:52px; border:2px solid; border-radius:50%; content:"";}
-.split .elements li article .heading{margin-bottom:10px; padding-top:5px; font-size:1.2rem;}
+.split .elements li article .heading{margin-bottom:10px; padding-top:5px; font-size: 1.8rem;font-weight: bold;}
 .icon{border-color:#D7D7D7;}
 /*article:hover .icon{border-color:inherit; color:#FFFFFF; background-color:#56AED4;}*/
 .split{color:black; background-color:beige;}/* Changes in mediaqueries */
@@ -101,4 +105,34 @@ a{
 .prize {
   font-weight: bold;
   font-size: 23px;
+}
+
+@media (min-width:991px) {
+  .small-screen {
+    display: none
+  }
+}
+
+@media (max-width:991px) {
+  .header .logo {
+    margin-top: -32px !important;
+    margin-left: 0px;
+  }
+  h3 {
+    font-size: 19px;
+    font-weight: bold;
+  }
+  #regBtn {
+    background-color: #ed5a6a!important;
+    cursor: pointer!important;
+    width: 135px!important;
+    height: 41px!important;
+    color: white!important;
+    padding-top: 12px!important;
+    padding-left: 13px!important;
+    font-weight: bolder!important;
+  }
+  .col-md-6 {
+    margin-left: -37px;
+  }
 }
