--- a/intaglio-v3/HTML/events/event.css
+++ b/intaglio-v3/HTML/events/event.css
@@ -10,16 +10,27 @@ body {
   max-height: 95px;
   line-height: 65px;
   margin-top: 4px!important;
-  margin-left: -57px;
+  margin-left: -24px;
+}
+
+.logo-event {
+  width: 150px;
 }
 
 .header .navbar {
   background: black;
 }
 
-.event-name {
+.event-title {
+  width: 62%;
   color: white;
+  height: 71px;
   font-size: 26px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 71px;
+  padding-left: -25px;
+  padding-left: -1px;
 }
 
 .bgd-overlay {
@@ -49,7 +60,7 @@ p {
 
 .poc {
   padding: 30px;
-  padding-bottom: 0px;
+  padding-bottom: 20px;
 }
 
 .poc > ul > li {
@@ -70,6 +81,8 @@ div#regBtn {
   padding-top: 24px;
   padding-left: 8px;
   font-weight: bolder;
+  margin-top: -72px;
+  ;
 }
 .bold{
   font-weight: bold;
@@ -131,8 +144,19 @@ a{
     padding-top: 12px!important;
     padding-left: 13px!important;
     font-weight: bolder!important;
+    margin-top: 0px!important;
   }
   .col-md-6 {
     margin-left: -37px;
   }
+}
+
+.margin-l-3 {
+  margin-left: 3px;
+}
+.margin-t-2 {
+  margin-top: 2px;
+}
+.flex {
+  display: flex;
 }
