events - done, fixed tennets on mobile, fixed event section

--- a/intaglio-v3/HTML/css/layout.css
+++ b/intaglio-v3/HTML/css/layout.css
@@ -1008,6 +1008,12 @@ fieldset[disabled] .btn-theme {
   }
 }
 
+@media screen and (max-width:991px) {
+  .carousel-indicators {
+    bottom: 30px;
+  }
+}
+
 .carousel-centered {
   position: absolute;
   top: 50%;
