--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -831,3 +831,29 @@ div.main-text
   bottom: 88px;
   width: 100%;
 }
+
+.workshop_img {
+  width: 100%
+}
+
+.btn-intag {
+  color: #fff;
+  background-color: black;
+  border-color: black;
+}
+
+.btn-intag:hover {
+  background-color: black;
+}
+
+.btn-intag-reg {
+  position: relative;
+  top: -35px;
+  right: -291px;
+}
+
+.btn-intag-det {
+  position: relative;
+  top: -35px;
+  right: -103px;
+}
