workshop large screen

--- a/intaglio-v3/HTML/events/event.css
+++ b/intaglio-v3/HTML/events/event.css
@@ -160,3 +160,20 @@ a{
 .flex {
   display: flex;
 }
+@media screen and (min-width:991px){
+  .large-screen {
+    display: block;
+  }
+  .small-screen {
+    display: none!important
+  }
+}
+@media screen and (max-width:991px) {
+
+  .large-screen {
+    display: none!important;
+  }
+  .small-screen {
+    display: block
+  }
+}
