changed css of workshop

--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -865,6 +865,10 @@ div.wrapperWorkshop{
   color: white
 }
 
+.btn-intag-det:hover > a{
+  color: black
+}
+
 .col-border {
   margin-right: 97px;
 }
