--- a/intaglio-v3/HTML/css/main.css
+++ b/intaglio-v3/HTML/css/main.css
@@ -872,3 +872,29 @@ div.wrapperWorkshop{
 .col-border {
   margin-right: 97px;
 }
+
+.float{
+	position:fixed;
+	width:110px;
+	height:40px;
+	bottom:10px;
+	left:40px;
+	background-color:#31b0d5;
+	color:#FFF;
+  text-align:center;
+  border-radius: 10px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100000;
+}
+
+.my-float{
+	margin-left:-60px;
+}
+
+.float-download {
+  margin-top: 6px;
+  position: fixed;
+  font-size: 12px;
+  font-weight: bold;
+  color: white;
+}
